Created new compare

--- a/src/index-01.html
+++ b/src/index-01.html
@@ -11,16 +11,15 @@
     <div class="main-inner container">
         @@include("html/main-box.html")
 
-        <div class="main-header">
-            <img src="img/media/main.png" alt="">
+        <div class="main-product">
+            <div class="main-headline">Гипсовая штукатурка <span class="main-headline__decor">KNAUF ROTBAND</span></div>
+            <img src="img/example/main-product.png" alt="">
         </div>
     </div>
 </section>
 
 @@include("html/compare.html")
-
 @@include("html/advantage.html")
-
 @@include("html/catalog.html")
 @@include("html/order-delivery.html")
 @@include("html/delivery.html")
