--- a/src/html/advantage.html
+++ b/src/html/advantage.html
@@ -1,43 +1,33 @@
 <section class="advantage">
     <ul class="advantages-inner">
         <li class="advantage-item">
-            <div class="advantage-decor">
-                <svg class="advantage-decor__icon advantage-decor__list">
-                    <use xlink:href="img/icons.svg#list"></use>
-                </svg>
-            </div>
-            <div class="advantage-title">АССОРТИМЕНТ</div>
-            <div class="advantage-text">
-                Всегда в наличии более 6 000<br>
-                наименований строительных<br>
-                материалов
-            </div>
+            <svg class="advantage-icon">
+                <use xlink:href="/img/icons.svg#check"></use>
+            </svg>
+            <span class="advantage-title">Профессиональная консультация</span>
+            <br>
+            <span class="advantage-text">ориентированная непосредственно на объект заказчика</span>
         </li>
         <li class="advantage-item">
-            <div class="advantage-decor">
-                <svg class="advantage-decor__icon advantage-decor__quality">
-                    <use xlink:href="img/icons.svg#quality"></use>
-                </svg>
-            </div>
-            <div class="advantage-title">КАЧЕСТВО</div>
-            <div class="advantage-text">
-                Все стройматериалы соответствуют<br>
-                отечественным стандартам и<br>
-                сертифицированы на территории РФ
-            </div>
+            <svg class="advantage-icon">
+                <use xlink:href="/img/icons.svg#check"></use>
+            </svg>
+            <span class="advantage-title">Оперативный подбор</span>
+            <span class="advantage-text">строительных материалов нашими менеджерами</span>
         </li>
         <li class="advantage-item">
-            <div class="advantage-decor">
-                <svg class="advantage-decor__icon advantage-decor__delivery">
-                    <use xlink:href="img/icons.svg#delivery"></use>
-                </svg>
-            </div>
-            <div class="advantage-title">Доставка</div>
-            <div class="advantage-text">
-                Мы доставляем стройматериалы в<br>
-                течение 4 часов или в удобный Вам<br>
-                день и время
-            </div>
+            <svg class="advantage-icon">
+                <use xlink:href="/img/icons.svg#check"></use>
+            </svg>
+            <span class="advantage-title">Предоставление гарантий  производителя.</span><br>
+            <span class="advantage-text"> Только высококачественные строительные материалы</span>
+        </li>
+        <li class="advantage-item">
+            <svg class="advantage-icon">
+                <use xlink:href="/img/icons.svg#check"></use>
+            </svg>
+            <span class="advantage-title">Оптовые цены</span>
+            <span class="advantage-text">за счет прямых договоров с производителями</span>
         </li>
     </ul>
 </section>
