--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,11 @@
 <header class="header container">
-    <a href="/" class="header-logo"><img src="img/logo.svg" alt="Строй-база №1 стройматериалы по оптовым ценам"></a>
-    <div class="header-decor"></div>
+    <a href="/" class="header-logo"><img src="img/logo-2.svg" alt="Строй-база №1 стройматериалы по оптовым ценам"></a>
+    <div class="header-decor">
+        <div class="header-decor__text">
+            <div class="header-decor__text-head">КРУПНЕЙШАЯ БАЗА</div>
+            <div class="header-decor__text-info">СТРОИТЕЛЬНЫХ МАТЕРИАЛОВ</div>
+        </div>
+    </div>
     <div class="header-support">
         <div class="header-support__schedule"><span class="text-bold">Время работы:</span> ежедневно 9:00 – 21:00</div>
         <a href="tel:+74952222222" class="header-support__phone" rel="nofollow">
