--- a/src/html/head.html
+++ b/src/html/head.html
@@ -3,15 +3,15 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>@@title</title>
 
-    <link rel="stylesheet" href="/css/styles.min.css?ver=2.3">
+    <link rel="stylesheet" href="/css/styles.min.css?ver=2.4">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#75a8f1">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#3163ac">
     <link rel="shortcut icon" href="favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#75a8f1">
+    <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="favicon/browserconfig.xml">
-    <meta name="theme-color" content="#75a8f1">
+    <meta name="theme-color" content="#3163ac">
 </head>
