Fixed main header

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,115 @@
         @@include("html/main-box.html")
 
         <div class="main-header">
-            <img src="img/media/main.png" alt="">
+            <ul class="main-list list-unstyled">
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-01.jpg" alt="">
+                        <div class="main-item__text">
+                            Штукатурные, cухие<br>
+                            и сыпучие смеси
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-02.jpg" alt="">
+                        <div class="main-item__text">
+                            Монтажные смеси<br>
+                            Плиточные клеи
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-03.jpg" alt="">
+                        <div class="main-item__text">
+                            Блоки строительные<br>
+                            Кирпич
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-04.jpg" alt="">
+                        <div class="main-item__text">
+                            Гипсокартонные<br>
+                            системы
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-05.jpg" alt="">
+                        <div class="main-item__text">
+                            Теплоизоляция,<br>
+                            гидроизоляция
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-06.jpg" alt="">
+                        <div class="main-item__text">
+                            Кабель<br>
+                            Элекротовары
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-07.jpg" alt="">
+                        <div class="main-item__text">
+                            Водоснабжение<br>
+                            Трубы, фитинги, краны
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-08.jpg" alt="">
+                        <div class="main-item__text">
+                            Лакокрасочные<br>
+                            материалы
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-09.jpg" alt="">
+                        <div class="main-item__text">
+                            Пиломатериалы<br>
+                            Фанера, OSB, ЦСП, ДСП
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-10.jpg" alt="">
+                        <div class="main-item__text">
+                            <div style="padding-top: 10px">Металлопрокат</div>
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-11.jpg" alt="">
+                        <div class="main-item__text">
+                            Металлические<br>
+                            изделия и крепеж
+                        </div>
+                    </div>
+                </li>
+                <li class="main-item">
+                    <div class="main-item__inner">
+                        <img src="img/example/img-12.jpg" alt="">
+                        <div class="main-item__text">
+                            Инструменты и<br>
+                            расходные материалы
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
