--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -23,12 +23,14 @@
                 </svg>
                 8 800 350 56 47
             </a>
-            <span class="footer-link">
+            <div class="footer-link">
                 <svg class="footer-link__icon">
                     <use xlink:href="/img/icons.svg#email"></use>
                 </svg>
-                <span style="padding-right: 5px">е-mail: </span> <a href="mailto:shop@yandex.ru" rel="nofollow"> shop@yandex.ru</a>
-            </span>
+                <div>
+                    е-mail:  <a href="mailto:shop@yandex.ru" rel="nofollow"> shop@yandex.ru</a>
+                </div>
+            </div>
             <div class="footer-link">
                 <svg class="footer-link__icon">
                     <use xlink:href="/img/icons.svg#history"></use>
