created jivosite and deleted fly elements

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -118,20 +118,6 @@
     </div>
 </footer>
 
-<div class="social-fixed">
-    <a href="https://vk.com/appleairpodsdiscount" class="social-fixed-point vk" rel="nofollow" target="_blank"></a>
-    <a href="https://api.whatsapp.com/send?phone=79037741881" class="social-fixed-point whatsapp" rel="nofollow"
-       target="_blank"></a>
-    <a href="tg://resolve?domain=airpodsdiscount" st="link-support-telegram" title="@airpodsdiscount"
-       class="social-fixed-point telegram" rel="nofollow" target="_blank"></a>
-    <a href="https://www.instagram.com/airpodsrefofficial/" class="social-fixed-point instagram" rel="nofollow"
-       target="_blank"></a>
-</div>
+<script src="js/scripts.min.js?ver=1.8"></script>
 
-<div class="scroll-to-top">
-    <svg class="scroll-to-top__icon">
-        <use xlink:href="/img/icons.svg#arrow"></use>
-    </svg>
-</div>
-
-<script src="js/scripts.min.js?ver=1.7"></script>
+<script src="//code-ya.jivosite.com/widget/L2o3h0zkIO" async></script>
